# SciencePlots

./: .gitattributes  .gitignore  .readthedocs.yml  CHANGES.md  LICENSE  MANIFEST.in  Makefile  README.md  ieee.mplstyle  pgf.mplstyle  pyproject.toml  science.mplstyle  setup.py  subfigure-slim.mplstyle  subfigure.mplstyle
.github/ISSUE_TEMPLATE/: 01-bug.yml  03-help.yml
.github/wf/: pytest.yaml
.github/workflows/: pytest.yaml  ruff_check.yaml
SciencePlots/: __init__.py
SciencePlots/styles/: science.mplstyle
docs/source/: conf.py  index.rst
docs/source/guide/: faq.rst  (+1 more)
examples/: README.md  README.rst  __examples_generator.py  plot-examples.py  plot-figure.py  plot-scatter.py  plot-square.py  plot-subfigure.py  plot_examples.py  template_plot.py.jinja2  template_plot_languages.py.jinja2  template_plot_scatter.py.jinja2  tmp.py
examples/figures/: fig1.pgf  fig2.pgf  fig3.pgf
examples/templates/: README.rst.jinja2  base_example.jinja2  base_example.py.jinja2  cjk_langs.jinja2  language_example.jinja2  language_example.py.jinja2  scatter_example.jinja2  scatter_example.py.jinja2
examples/tex/: document.tex
scienceplots/: __init__.py  styles_discovery.py
scienceplots/styles/: scatter.mplstyle  science.mplstyle
scienceplots/tests/: conftest.py  test_scienceplots.py
scienceplots_/: __init__.py
src/scienceplots/: __init__.py
styles/: high-vis.mplstyle  notebook.mplstyle  scatter.mplstyle  science.mplstyle
styles/color/: bright.mplstyle  high-contrast.mplstyle  light.mplstyle  muted.mplstyle  retro.mplstyle  vibrant.mplstyle
styles/journals/: ieee.mplstyle  nature.mplstyle
styles/misc/: cjk-fonts.mplstyle  cjk-jp-font.mplstyle  cjk-kr-font.mplstyle  cjk-sc-font.mplstyle  grid.mplstyle  latex-sans.mplstyle  pgf.mplstyle
(+85 files in other folders)
