[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "SciencePlots"
authors = [{ name = "John Garrett", email = "garrettj403@gmail.com" }]
maintainers = [{ name = "Echedey Luis", email = "echelual@gmail.com" }]
description = "Format Matplotlib for scientific plotting"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }

keywords = [
    "matplotlib-style-sheets",
    "matplotlib-figures",
    "scientific-papers",
    "thesis-template",
    "matplotlib-styles",
    "python",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
    "Framework :: Matplotlib",
]

dynamic = ["version"]

requires-python = ">=3.8"
dependencies = ["matplotlib"]

[project.optional-dependencies]
test = ["pytest", "numpy"]
all = ["SciencePlots[test]"]

[project.urls]
Homepage = "https://github.com/garrettj403/SciencePlots/wiki"
Documentation = "https://github.com/garrettj403/SciencePlots/wiki"
Repository = "https://github.com/garrettj403/SciencePlots"
Issues = "https://github.com/garrettj403/SciencePlots/issues"
Changelog = "https://github.com/garrettj403/SciencePlots/blob/master/CHANGES.md"

[tool.setuptools_scm]
# blank section to avoid warning

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["scienceplots/tests"]

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

# Exclude annotations and type comments
lint.ignore = ["ANN"]
